add blinking when timer paused, fix bug with multiple intevals running (not being properly cleared)

--- a/src/components/Timer/Timer.css
+++ b/src/components/Timer/Timer.css
@@ -3,3 +3,13 @@
     flex-direction: column;
     justify-content: space-evenly;
 }
+
+.blink {
+    animation: blinker 1s linear infinite alternate;
+}
+
+@keyframes blinker {
+    100% {
+        opacity: 20%;
+    }
+}
